# MangaAnime-Info-delivery-system

./: .automation-state.json  .ci-test-trigger  .ci-trigger  .coveragerc  .env.example  .env.production  .env.template  .gitignore  .gitignore.security  API_COLLECTION_COMPLETE.md  AUTO_REPAIR_LOOP_COMPLETE.md  AUTO_REPAIR_PROGRESS_REPORT.md  AUTO_SYSTEM_GUIDE.md  BACKEND_ENHANCEMENTS_SUMMARY.md  CHANGELOG_BACKEND_API.md  CHANGES_SUMMARY.md  CHARTJS_PRELOAD_FIX_REPORT.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CRITICAL_FIXES_REPORT.json  DEVOPS_SUMMARY.md  ERROR_FIX_FINAL_REPORT.md  ERROR_FIX_SUMMARY.md  ERROR_NOTIFICATION_GUIDE.md  FINAL_LOOP_COMPLETE.md  FIXES_SUMMARY.md  GITHUB_ACTIONS_LOOP_FIX_REPORT.md  GITHUB_NOTIFICATION_DISABLE_GUIDE.md  GITHUB_SECRETS_SETUP.md  GIT_SETUP_GUIDE.md  GMAIL_RSS_SETUP_REPORT.md  GMAIL_SETUP_GUIDE.md  IMPLEMENTATION_FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GITHUB_CLI.md  INVESTIGATION_REPORT_UPCOMING_API.md  JAVASCRIPT_ERROR_FIX_REPORT.md  JAVASCRIPT_FIX_SUMMARY.md  Makefile  NOTIFICATION_FIX_FINAL_REPORT.md  (+131 more)
.claude/: CLAUDE.md
.github/: dependabot.yml  repair-loop-config.yml  repair-patterns.json
.repair-state/: status.json
.serena/: project.yml
app/: dashboard_main.py  release_notifier.py  start_web_ui.py  web_app.py  web_app_with_api_auth.py  web_ui.py
auth/: auth_config.py  create_token_improved.py  generate_token.py  oauth_setup_helper.py
backup/: .gitkeep
backups/: db.sqlite3.backup_20251206_112055  db.sqlite3.backup_20251206_112100  db.sqlite3.backup_20251206_112104
config/: .coveragerc  Makefile  Makefile.new  auto-repair-recommended.yml  config.ci.json  config.template.json  gmail_config.json.template  gunicorn_config.py  playwright.config.ts  pytest.ini  ratelimit_config.py  requirements-dev.txt  settings.json  settings.local.json  title_mapping.json
data/: FILE_MIGRATION_SUMMARY.txt  db.sqlite3-shm  db.sqlite3-wal  init_output.txt  last_update.json  optimize_database.sql  (+4 more)
(+1154 files in other folders)
